Touch keyboard does not hide, when a text component looses focus

XMLWordPrintable

    • b05
    • windows_10

        Touch keyboard does not hide even when the focus is lost from the editable text component

        Reproducible on Microsoft Surface (Windows 10 Tablet Mode)

        Steps to reproduce:
        Scenario 1:
        1.Run the attached "JTouchTest2.java" or "TouchTest2.java" with JDK 8u172 b06
        2.Touch on the editable area of one of the editable text components and wait for the touch keyboard to show
        3.Touch on different component in application GUI

        Scenario 2:
        1.Run the attached "JTouchTest2.java" or "TouchTest2.java" with JDK 8u172 b06
        2.Touch on the editable area of the text component with the text "text field" and wait for the touch keyboard to show
        3.Press the Tab key on the touch keyboard, so that the focus shifts from the text field to one of the check boxes.

        Expected behavior : on screen keyboard must get hidden once the focus is lost on the editable text component
        Actual behavior : on screen keyboard does not get hidden when the focus is lost from the editable text component

        Is it a regression: No, this is part of the new functionality introduced in 8u172 b01 as fix for JDK-8166772

          1. JTouchTest.java
            7 kB
            Vikrant Agarwal
          2. JTouchTest2.java
            7 kB
            Anton Litvinov
          3. PrintQL_Procedures.html
            7 kB
            Vikrant Agarwal
          4. TouchTest.java
            3 kB
            Vikrant Agarwal
          5. TouchTest2.java
            3 kB
            Anton Litvinov

              Assignee:
              Anton Litvinov (Inactive)
              Reporter:
              Vikrant Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: