8198606: Touch keyboard does not hide, when a text component looses focus

Reviewed-by: serb, dmarkov